--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background: url('https://i.imgur.com/8z3kW8P.jpg') no-repeat center center fixed;
+  background: url('https://postimg.cc/hhwspQtq') no-repeat center center fixed;
   background-size: cover;
   color: #000;
   min-height: 100vh;
